add swagger ui api auth
